<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_box"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <ImageView
        android:id="@+id/img_leader"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:srcCompat="@drawable/simbol" />

    <TextView
        android:id="@+id/tv_class_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_banner_item_name_ex"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_banner_item_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toEndOf="@+id/tv_class_title"
        app:layout_constraintTop_toBottomOf="@+id/img_leader"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tv_class_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_banner_item_type_ex"
        android:textColor="@color/dongduk"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <TextView
        android:id="@+id/tv_class_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/class_banner_item_content_ex"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline45"
        app:layout_constraintStart_toStartOf="@+id/tv_class_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_class_title"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>