<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        android:background="@color/background_1"/>

    <ImageButton
        android:id="@+id/btn_search_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_search_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_setting_setting"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_classes_setting"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/btn_classes_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_groups_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_search_setting"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_home_setting"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/btn_home_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_home_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_classes_setting"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/btn_setting_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_search_setting"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.5"
        android:backgroundTint="@color/dongduk"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_logout_button"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_correction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <Button
        android:id="@+id/btn_correction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/setting_correction_button"
        android:textColor="@color/dongduk"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_logout"
        app:strokeColor="@color/dongduk"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_notice_button"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_inquiry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_correction" />

    <Button
        android:id="@+id/btn_inquiry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/setting_inquiry_button"
        android:textColor="@color/dongduk"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_notice"
        app:strokeColor="@color/dongduk"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_information"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_secession"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inquiry" />

    <Button
        android:id="@+id/btn_secession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/setting_secession_button"
        android:textColor="@color/dongduk"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_information"
        app:strokeColor="@color/dongduk"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>